@@ -1,5 +1,4 @@
 tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--enable-preview")
     options.compilerArgs.add("-Xlint:preview")
 }
 
